<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IbabaiR</string>
    <string name="introduction">Introduction</string>
    <string name="rules">Rules</string>
    <string name="confirm">Accept rules</string>
    <string name="tos">Terms of service</string>
    <string name="reject">Reject</string>
    <string name="signup">Create your account</string>
    <string name="dialog_tos">Pressing OK your confirm that you fully aware of Ibabai terms of service and accept them. </string>
    <string name="scan">Scan</string>
    <string name="desc_item_icon">Item Icon</string>
    <string name="desc_help_icon">Help Icon</string>
    <string name="desc_share_icon">Share Icon</string>
     <string name="desc_delete_icon">Delete Icon</string>
    <string-array name="core_menu">
        <item >My promos</item>
        <item > Market</item>
        <item >Stop list</item>
        <item >Profile</item>
        <item>Log book</item>
        <item >Settings</item>
        <item>Feedback</item>
        <item>Help</item>
        <item>Share app</item>
    </string-array>
    <!-- <array name="core_menu_icons" >
        <item>@drawable/ic_action_mypromos</item>
        <item>@drawable/ic_action_market</item>
        <item>@drawable/ic_action_stop</item>
        <item>@drawable/ic_action_profile</item>
        <item>@drawable/ic_action_log</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_feedback</item>
        <item>@drawable/ic_action_help</item>
        <item>@drawable/ic_action_share</item>
    </array> 
    -->
    
    
    <string name="menu">Menu</string>
    <string name="ab_promo">My promos</string>
    <string name="ab_market">Marketplace</string>
    <string name="ab_stoplist">Stop List</string>
    <string name="ab_feedback">Feedback</string>
    <string name="ab_help">Help</string>
    <string name="ab_log">Log book</string>
    <string name="ab_profile">Profile</string>
    <string name="ab_settings">Settings</string>
    <string name="ab_share">Share app</string>
    <string name="desc_mts">mts</string>
    <string name="call_back">Call Back</string>
    <string name="send_mail">Send mail</string>
    <string name="on_upgrade_error">This should not be called</string>
    <string name="promo_rules">Rules</string>
    <string name="not_inter">Not interested</string>
    <string name="stop_list">Stop list</string>
    <string name="desc_promo_tag">Promo tag</string>
    <string name="desc_stoplist_tag">stop_list_tag</string>
    <string name="dialog_ni">"You have two options:\r\n1.Permanently DELETE this promo. \r\n2.BLOCK all future promos of this chain. \r\nYou will be able to unblock chain on "Block" page."</string>
    <string name="dialog_sl">Do you really want to block all the promos from this company?</string>
    <string name="dialog_unblock">I agree to receive promos from this company again.</string>
    <string name="dialog_loc_title">Location service is disabled. </string>
    <string name="dialog_loc">You are unable to use IBABAI without GPS. Turn on?</string>
    <string name="ab_password">Password Change</string>
    <string name="add_geofences_result_succes">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_id_failure">Removing geofences by id failed: error code: %1$d GeofenceRequestIds = %2$s</string>
    <string name="remove_geofences_intent_success">Removing all geofences succeeded</string>
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed for the user</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_disabled">Google Play Service is disabled</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_missing">Google Play Services is missing</string>
    <string name="connection_error_outdated">Google Play Services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_unknown">Transition unknown</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofence %2$s</string>
    <string name="add_geofences_already_requested_error">Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="remove_geofences_already_requested_error">Can\'t remove geofences, previous request hasn\'t finished.</string>
    <string name="dialog_net_title">Warning! No internet connection!</string>
    <string name="dialog_network">Sign-up is impossible without internet connection. Please connect to Internet.</string>
    <string name="ar_disconnected">ARClient disconnected</string>
    <string name="ar_connected">ARClient connected</string>
    <string name="remove_ar_already_requested_error">Can\'t remove ar, previous request has\'t finished.</string>
    <string name="promo_map">Show on map</string>
    <string name="block_list">Block list</string>
    <string name="active_promos">Active promos</string>
    <string name="stores_with_promo">Stores with promo</string>
    <string name="activate_promo">Activate promo</string>
    <string name="code_tag">Code tag</string>
    <string name="code_heading">Advise this code to Assistant.</string>
    <string name="have_problem">Have problem? Press!</string>
    <string name="ab_activation">Activation</string>
    <string name="desc_code_tag">Code tag</string>
    <string name="dialog_problem">If code is not excepted do not waste your time with store personal. They will not help you! Pay your bill and visit &quot;Help&quot; page (?) of this application. Should you not find solution to your problem, please contact us from that page!</string>
    <string name="ab_map_ps">Promo Map</string>
    <string name="no_map">Map Error. Try later.</string>
    

</resources>