<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:id="@+id/code_tag"
        android:layout_width="match_parent"        
        android:layout_height="300dp"
        android:scaleType="fitXY"        
        android:contentDescription="@string/desc_code_tag" />
    
    <TextView
        android:id="@+id/code_heading" 
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:textSize = "20sp"
        android:layout_gravity="center"
        android:text = "@string/code_heading">        
    </TextView>
    
    <TextView
        android:id="@+id/promo_code" 
        android:layout_width = "match_parent"
        android:layout_height = "300dp"
        android:textSize = "200sp"
        android:textAlignment="center" >               
    </TextView>
    
    <Button
         	android:id="@+id/btn_problem"         	      	
         	android:layout_width="250dp"
         	android:layout_height="wrap_content"
         	android:layout_gravity="center"
         	android:layout_marginBottom="10dp"
         	android:textSize="30sp"
         	android:paddingTop="10dp"
         	android:paddingBottom="10dp"
         	android:background="@drawable/btn_rules"
         	android:onClick="HaveProblem"                        
         	android:text="@string/have_problem" />    

</LinearLayout>
